Added API routes

--- a/views/home.jade
+++ b/views/home.jade
@@ -1,8 +1,13 @@
 extends layout
 
 block content
-  div.col-xs-12.col-md-9.col-md-offset-1.mean-div
-    br
-    h2 BigDoc disease diagnosis
-    h4 Write down your symptoms like if you were speaking to a real doctor
-    textarea
+	div.col-xs-12.col-md-9.col-md-offset-1.mean-div
+		h2 BigDoc disease diagnosis
+		br
+		h4 Write down your symptoms like if you were speaking to a real doctor
+		textarea
+		//Replace for a CSS rule
+		br
+		br
+		div
+			p {a:b b:c}
