--- a/views/home.jade
+++ b/views/home.jade
@@ -5,7 +5,8 @@ block content
 		h2 BigDoc disease diagnosis
 		br
 		h4 Write down your symptoms like if you were speaking to a real doctor
-		textarea
+		textarea(id='symptoms')
+		textarea(id='filtered-symptoms')
 		//Replace for a CSS rule
 		br
 		br
