--- a/views/home.jade
+++ b/views/home.jade
@@ -6,7 +6,8 @@ block content
 		br
 		h4 Write down your symptoms like if you were speaking to a real doctor
 		textarea(id='symptoms')
-		textarea(id='filtered-symptoms')
+		br
+		filter(id='filtered-symptoms')
 		//Replace for a CSS rule
 		br
 		br
