--- a/views/layout.jade
+++ b/views/layout.jade
@@ -18,6 +18,7 @@ head
     link(rel='stylesheet', href='/bower/bower_components/bootstrap/dist/css/bootstrap.min.css')
     link(rel='stylesheet', href='/bower/bower_components/bootstrap/dist/css/bootstrap-theme.min.css')
     link(rel='stylesheet', href='/css/overrides.css')
+    link(rel='stylesheet', href='/css/default.css')
     script(src='/bower/bower_components/jquery/dist/jquery.min.js')
 
   body
