--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,3 +1,5 @@
+//- Bigdoc disease diagnosis
+//-
 //- Main Layout of our project
 //- MEAN Boilerplate by @Jmlevick <http://jmlevick.me>
 //- License: Coffeeware <https://github.com/Jmlevick/coffeeware-license>
@@ -5,33 +7,32 @@
 doctype
 html(ng-app, lang='en-US')
 head
-    meta(charset='UTF-8')
-    title MEAN Boilerplate: myApp
-    meta(name='description', content='Lorem Ipsum Dolor sit amet')
-    meta(name='keywords', content='foo, bar, baz')
-    meta(http-equiv='X-UA-Compatible', content='IE=edge')
-    meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
-    //if lt IE 9
-      script(src='/bower/bower_components/html5shiv/dist/html5shiv.min.js')
-      script(src='/bower/bower_components/respond/dest/respond.min.js')
-    link(rel='shortcut icon', href='/favicon.ico')
-    link(rel='stylesheet', href='/bower/bower_components/bootstrap/dist/css/bootstrap.min.css')
-    link(rel='stylesheet', href='/bower/bower_components/bootstrap/dist/css/bootstrap-theme.min.css')
-    link(rel='stylesheet', href='/css/overrides.css')
-    link(rel='stylesheet', href='/css/default.css')
-    script(src='/bower/bower_components/jquery/dist/jquery.min.js')
+	meta(charset='UTF-8')
+	title MEAN Boilerplate: myApp
+	meta(name='description', content='Lorem Ipsum Dolor sit amet')
+	meta(name='keywords', content='foo, bar, baz')
+	meta(http-equiv='X-UA-Compatible', content='IE=edge')
+	meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
+	//if lt IE 9
+		script(src='/bower/bower_components/html5shiv/dist/html5shiv.min.js')
+		script(src='/bower/bower_components/respond/dest/respond.min.js')
+	link(rel='shortcut icon', href='/favicon.ico')
+	link(rel='stylesheet', href='/bower/bower_components/bootstrap/dist/css/bootstrap.min.css')
+	link(rel='stylesheet', href='/bower/bower_components/bootstrap/dist/css/bootstrap-theme.min.css')
+	link(rel='stylesheet', href='/css/default.css')
+	script(src='/bower/bower_components/jquery/dist/jquery.min.js')
 
-  body
-    div.container
-        div.row
-            block content
+	body
+		div.container
+			div.row
+				block content
 
-    script(src='/bower/bower_components/angular/angular.min.js')
-    script(src='/bower/bower_components/angular-resource/angular-resource.min.js')
-    script(src='/bower/bower_components/angular-animate/angular-animate.min.js')
-    script(src='/js/angular-app.js') 
-    script(src='/js/custom.js')
-    script(src='/bower/bower_components/bootstrap/dist/js/bootstrap.min.js')
-    script(src='/bower/bower_components/bootbox/bootbox.js')
-    link(rel='stylesheet', href='/bower/bower_components/font-awesome/css/font-awesome.min.css')
-    link(rel='stylesheet', href='/bower/bower_components/angular-animate-css/build/nga.min.css')
+	script(src='/bower/bower_components/angular/angular.min.js')
+	script(src='/bower/bower_components/angular-resource/angular-resource.min.js')
+	script(src='/bower/bower_components/angular-animate/angular-animate.min.js')
+	script(src='/js/angular-app.js') 
+	script(src='/js/custom.js')
+	script(src='/bower/bower_components/bootstrap/dist/js/bootstrap.min.js')
+	script(src='/bower/bower_components/bootbox/bootbox.js')
+	link(rel='stylesheet', href='/bower/bower_components/font-awesome/css/font-awesome.min.css')
+	link(rel='stylesheet', href='/bower/bower_components/angular-animate-css/build/nga.min.css')
