Add first D3 WordCloud snippet

--- a/views/home.jade
+++ b/views/home.jade
@@ -25,7 +25,9 @@ block content
 						h1 screen
 				h4 As you write, here are the names of the diseases that match your input:
 				div
-					//h1 wordcloud
+					h1 wordcloud
+					div#wordcloud
+						p text
 					h1 json
 					pre#json
 						#{response}
