Working wordcloud with fake data

--- a/views/home.jade
+++ b/views/home.jade
@@ -27,12 +27,13 @@ block content
 				div
 					h1 wordcloud
 					div#wordcloud
-						p text
 					h1 json
 					pre#json
 						#{response}
 				h4 There are 80% chances that the described symptoms are related to
 					h1 disease
 
-script(src='/js/jquery.js')
-script(src='/js/custom.js')
+#script(src='/js/jquery.js')
+#script(src='/js/d3.js')
+#script(src='/js/custom.js')
+
