--- a/views/layout.jade
+++ b/views/layout.jade
@@ -32,6 +32,8 @@ head
 	script(src='/bower/bower_components/angular-animate/angular-animate.min.js')
 	script(src='/js/angular-app.js') 
 	script(src='/js/custom.js')
+	script(src='/js/d3.js')
+	script(src='/js/d3.wordcloud.js')
 	script(src='/bower/bower_components/bootstrap/dist/js/bootstrap.min.js')
 	script(src='/bower/bower_components/bootbox/bootbox.js')
 	link(rel='stylesheet', href='/bower/bower_components/font-awesome/css/font-awesome.min.css')
