--- a/views/home.jade
+++ b/views/home.jade
@@ -8,10 +8,10 @@ block content
 		div.row.margin-top-50
 			div.col-xs-10.col-xs-offset-1
 				h4 Write down your symptoms like if you were speaking to a real doctor or click on a sample to see how it works:
-				div(ng-app="symApp" ng-controller="symCtrl")
+				div(ng-controller="symCtrl")
 					input(type="text" ng-model="testinput")
 					p result
-					{{ testinput }}
+					{{testinput}}
 				div.row.text-center
 					div.col-xs-4
 						a Common cold
