--- a/views/home.jade
+++ b/views/home.jade
@@ -11,7 +11,8 @@ block content
 				div(ng-controller="symCtrl")
 					input(type="text" ng-model="testinput")
 					p result
-					{{testinput}}
+					//{{testinput}}
+					{{testinput2}}
 				div.row.text-center
 					div.col-xs-4
 						a Common cold
