--- a/views/home.jade
+++ b/views/home.jade
@@ -9,8 +9,7 @@ block content
 			div.col-xs-10.col-xs-offset-1
 				div(ng-controller="exampleCtrl")
 					h4 Write down your symptoms like if you were speaking to a real doctor or click on a sample to see how it works:
-					input(type="text" ng-model="inputCh")
-					p result
+					//input(type="text" ng-model="inputCh" style='width: 100%; height: 50px')
 					div.row.text-center
 						div.col-xs-4
 							a Common cold
@@ -19,21 +18,17 @@ block content
 							a Pneumonia
 						div.col-xs-4
 							a Infection
-					textarea#symptoms.margin-top-10
+					textarea(ng-model="inputCh")#symptoms.margin-top-10
 					h4 Based on your input, here are a list of some relevant signs and symptoms:
 					pre
 						filter(id='filtered-symptoms')
-					h4 Bigdoc is now searching for these information on several thousand articles from the internet:
-						div
-							h1 screen
+					//h4 Bigdoc is now searching for these information on several thousand articles from the internet:
+					//	div
+					//		h1 screen
 					h4 As you write, here are the names of the diseases that match your input:
 					div
-						h1 wordcloud
 						div#wordcloud
-						h1 json
-						//pre#json
-							//#{response}
-						pre#json2
-							{{testinput}}
-					h4 There are 80% chances that the described symptoms are related to
+						pre#json
+							{{resultJSON}}
+					h4 There are 80% chances that the described symptoms are related to:
 						h1 disease
