--- a/views/layout.jade
+++ b/views/layout.jade
@@ -32,8 +32,10 @@ head
 
 	script(src='/js/angular-app.js')
 	script(src='/js/custom.js')
-	script(src='/js/d3.js')
-	script(src='/js/d3.wordcloud.js')
+	//script(src='/js/d3.js')
+	//script(src='/js/d3.wordcloud.js')
+	script(src='/js/d3v2.js')
+	script(src='/js/disease_cloud.js')
 	script(src='/bower/bower_components/bootstrap/dist/js/bootstrap.min.js')
 	script(src='/bower/bower_components/bootbox/bootbox.js')
 	link(rel='stylesheet', href='/bower/bower_components/font-awesome/css/font-awesome.min.css')
