Added todo's to solve the wrong word sizing issue

--- a/views/home.jade
+++ b/views/home.jade
@@ -31,7 +31,7 @@ block content
 						form#form
 							p(style='position: absolute; right: 0px; top: 0px; display: none;')#status 5/5
 							div
-								textarea#sympt [{"key":"sadf","value":7},{"key":"xcv","value":3},{"key":"asdf","value":1},{"key":"asf","value":1}]
+								textarea#sympt [{"key":"abc","value":3},{"key":"cde","value":2},{"key":"zxc","value":1}]
 							div
 								p
 									label Spiral:
