Added sample symptoms for some diseases

--- a/views/home.jade
+++ b/views/home.jade
@@ -14,9 +14,9 @@ block content
 						a Common cold
 						//i.fa.fa-home
 					div.col-xs-4.nopadding
-						a Pneumonia
+						a Diabetes
 					div.col-xs-4.nopadding
-						a Infection
+						a GERD
 				textarea(ng-model="inputCh")#symptoms.margin-top-10
 				h4 Based on your input, here are a list of some relevant signs and symptoms:
 				pre
