Add missing underscore lib

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -32,6 +32,7 @@ head
 
 	script(src='/js/angular-app.js')
 	script(src='/js/custom.js')
+	script(src='/js/underscore.js')
 	//script(src='/js/d3.js')
 	//script(src='/js/d3.wordcloud.js')
 	script(src='/js/d3v2.js')
