--- a/views/layout.jade
+++ b/views/layout.jade
@@ -20,6 +20,7 @@ head
 	link(rel='stylesheet', href='/bower/bower_components/bootstrap/dist/css/bootstrap.min.css')
 	link(rel='stylesheet', href='/bower/bower_components/bootstrap/dist/css/bootstrap-theme.min.css')
 	link(rel='stylesheet', href='/css/default.css')
+	link(href='https://fonts.googleapis.com/css?family=Rambla:400,400italic,700,700italic' rel='stylesheet' type='text/css')
 	script(src='/bower/bower_components/jquery/dist/jquery.min.js')
 	script(src='/bower/bower_components/angular/angular.min.js')
 	script(src='/bower/bower_components/angular-resource/angular-resource.min.js')
