Update mongo in package

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,8 +1,4 @@
-//- Bigdoc disease diagnosis
-//-
-//- Main Layout of our project
-//- MEAN Boilerplate by @Jmlevick <http://jmlevick.me>
-//- License: Coffeeware <https://github.com/Jmlevick/coffeeware-license>
+//Bigdoc disease diagnosis
 
 doctype
 html(ng-app='bigdoc-app', lang='en-US')
