Add all resources locally

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -13,14 +13,13 @@ head
 		script(src='/bower/bower_components/html5shiv/dist/html5shiv.min.js')
 		script(src='/bower/bower_components/respond/dest/respond.min.js')
 	link(rel='shortcut icon', href='/favicon.ico')
-	link(rel='stylesheet', href='/bower/bower_components/bootstrap/dist/css/bootstrap.min.css')
-	link(rel='stylesheet', href='/bower/bower_components/bootstrap/dist/css/bootstrap-theme.min.css')
+	link(rel='stylesheet', href='/bootstrap/css/bootstrap.min.css')
+	link(rel='stylesheet', href='/bootstrap/css/bootstrap-theme.min.css')
 	link(rel='stylesheet', href='/css/default.css')
 	link(href='https://fonts.googleapis.com/css?family=Rambla:400,400italic,700,700italic' rel='stylesheet' type='text/css')
-	script(src='/bower/bower_components/jquery/dist/jquery.min.js')
-	script(src='/bower/bower_components/angular/angular.min.js')
-	script(src='/bower/bower_components/angular-resource/angular-resource.min.js')
-	script(src='/bower/bower_components/angular-animate/angular-animate.min.js')
+	script(src='/js/jquery.min.js')
+	script(src='/js/angular/angular.min.js')
+	script(src='/js/angular/angular-resource.min.js')
 
 	body
 		div.container
@@ -34,7 +33,5 @@ head
 	//script(src='/js/d3.wordcloud.js')
 	script(src='/js/d3v2.js')
 	script(src='/js/disease_cloud.js')
-	script(src='/bower/bower_components/bootstrap/dist/js/bootstrap.min.js')
-	script(src='/bower/bower_components/bootbox/bootbox.js')
-	link(rel='stylesheet', href='/bower/bower_components/font-awesome/css/font-awesome.min.css')
-	link(rel='stylesheet', href='/bower/bower_components/angular-animate-css/build/nga.min.css')
+	script(src='/bootstrap/js/bootstrap.min.js')
+	link(rel='stylesheet', href='/packages/font-awesome/css/font-awesome.min.css')
