--- a/views/layout.jade
+++ b/views/layout.jade
@@ -15,6 +15,7 @@ head
     link(rel='shortcut icon', href='/favicon.ico')
     link(rel='stylesheet', href='/bootstrap/css/bootstrap.min.css')
     link(rel='stylesheet', href='/bootstrap/css/bootstrap-theme.min.css')
+    link(rel='stylesheet', href='/bootstrap/css/bootstrap-slider.min.css')
     link(rel='stylesheet', href='/css/default.css')
     link(href='https://fonts.googleapis.com/css?family=Rambla:400,400italic,700,700italic' rel='stylesheet' type='text/css')
     script(src='/js/jquery.min.js')
@@ -34,4 +35,5 @@ head
     script(src='/js/d3v2.js')
     script(src='/js/disease_cloud.js')
     script(src='/bootstrap/js/bootstrap.min.js')
+    script(src='/bootstrap/js/bootstrap-slider.min.js')
     link(rel='stylesheet', href='/packages/font-awesome/css/font-awesome.min.css')
