--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,7 +4,7 @@ doctype
 html(ng-app='bigdoc-app', lang='en-US')
 head
 	meta(charset='UTF-8')
-	title BigDoc BigDoc disease diagnosis
+	title BigDoc disease diagnosis
 	meta(name='description', content='Lorem Ipsum Dolor sit amet')
 	meta(name='keywords', content='foo, bar, baz')
 	meta(http-equiv='X-UA-Compatible', content='IE=edge')
@@ -20,15 +20,15 @@ head
 	link(rel='stylesheet', href='/css/bigdoc.css')
 	script(src='/js/jquery.min.js')
 	script(src='/js/underscore.js')
-	script(src='/js/angular/angular.min.js')
-	script(src='/js/angular/angular-resource.min.js')
+	//script(src='/js/angular/angular.min.js')
+	//script(src='/js/angular/angular-resource.min.js')
 
 	body
 		div.container
 			div.row
 				block content
 
-	script(src='/js/bigdoc-angular.js')
+	//script(src='/js/bigdoc-angular.js')
 	script(src='/js/bigdoc-cs.js')
 	script(src='/js/d3.min.js')
 	script(src='/js/d3.wordcloud.js')
