--- a/views/index.jade
+++ b/views/index.jade
@@ -98,6 +98,6 @@ head
 	
 	script(src='/js/d3.min.js')
 	script(src='/js/d3.wordcloud.js')
-	script(src='/js/bigdoc-cs.js')
+	script(src='/js/bigdoc.js')
 	script(src='/bootstrap/js/bootstrap.min.js')
 	script(src='/bootstrap/js/bootstrap-slider.min.js')
