--- a/views/index.jade
+++ b/views/index.jade
@@ -52,10 +52,12 @@ head
 						div.col-lg-6
 							p
 								input#ex1(data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="20" data-slider-step="1" data-slider-value="14" style='display: none;')
+					div.row
+						div#progressBar
 				div.col-sm-12.col-md-12.col-lg-9
 					div(class="panel panel-default margin-top-10" style='min-width: 800px;')
 						div.panel-heading
-							p(style='display: inline-block;')#status 5/5
+							p(style='display: inline-block;')#status 0/0
 							button#dataSwitch(class="btn btn-default btn-xs right" type="button")
 								span
 									p.label Switch to JSON
@@ -95,5 +97,6 @@ head
 	script(src='/js/d3.min.js')
 	script(src='/js/d3.wordcloud.js')
 	script(src='/js/bigdoc.js')
+	script(src='/plugins/progressbar.js')
 	script(src='/bootstrap/js/bootstrap.min.js')
 	script(src='/bootstrap/js/bootstrap-slider.min.js')
