--- a/public/css/bigdoc.css
+++ b/public/css/bigdoc.css
@@ -94,3 +94,7 @@ span.connector {
 span.relevant {
 	font-weight: bold;
 }
+
+.form-control:focus {
+	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(102, 175, 233, 0.1);
+}
