--- a/views/index.jade
+++ b/views/index.jade
@@ -37,7 +37,8 @@ head
 							a Diabetes
 						div.col-lg-4.nopadding
 							a GERD
-					textarea#symptoms.margin-top-10
+					div.form-group
+						textarea#symptoms.form-control.margin-top-10
 					h4 Based on your input, here is a list of some relevant signs and symptoms:
 					pre
 						filter(id='filtered-symptoms')
@@ -57,7 +58,7 @@ head
 				div.col-sm-12.col-md-12.col-lg-9
 					div(class="panel panel-default margin-top-10" style='min-width: 800px;')
 						div.panel-heading
-							p(style='display: inline-block;')#status 0/0
+							p(style='display: none;')#status 0/0
 							button#dataSwitch(class="btn btn-default btn-xs right" type="button")
 								span
 									p.label Switch to JSON
